--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -188,7 +188,7 @@
 }
 
 .flash-sale-section {
-  margin-bottom: 400px;
+  margin-bottom: 100px;
 }
 
 .slider {
@@ -201,7 +201,7 @@
 .sider-container {
   background-color: var(--deepBlue);
   right: 0;
-  width: 20%;
+  width: 15%;
   height: 100vh;
   color: #f5f5f5;
   z-index: 2;
@@ -234,10 +234,21 @@
   margin-top: 40px;
 }
 
+.banner-slider-font {
+  font-size: 20px;
+  color: white;
+  text-align: center;
+}
+
+.banner-text {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
 .slider-img {
   display: block;
   margin-left: auto;
-  margin-right: auto;
 }
 
 .bannerdefaultColor {
