--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -296,6 +296,33 @@
 }
 
 /* Categorie styles */
+
 .categorie-selected {
   font-size: 35px;
+}
+
+.categorie-selector {
+  margin-top: 5vh;
+}
+
+.categorie-box {
+  border-style: solid;
+  border-width: 0.5px;
+  margin: 0 1px;
+}
+
+.selected-categorie-box {
+  border-style: solid;
+  border-width: 2px;
+  border-color: #01013f;
+  margin: 0 1px;
+}
+
+.categorie-option {
+  text-decoration: none;
+  color: inherit;
+}
+
+.categorie-option:hover {
+  color: #01013f;
 }
