--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -153,6 +153,7 @@
 .carousel-image {
   pointer-events: none;
 }
+
 .slider {
   display: flex;
   cursor: grab;
@@ -298,6 +299,7 @@
 /* Categorie styles */
 
 .categorie-selected {
+  color: rgb(158, 158, 158);
   font-size: 35px;
 }
 
@@ -308,6 +310,8 @@
 .categorie-box {
   border-style: solid;
   border-width: 0.5px;
+  border-color: rgb(158, 158, 158);
+  color: rgb(158, 158, 158);
   margin: 0 1px;
 }
 
@@ -325,4 +329,8 @@
 
 .categorie-option:hover {
   color: #01013f;
+}
+
+.categorie-image {
+  pointer-events: none;
 }
